# stylekit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: presets_guide.md
examples/: basic.py  recommended.py
stylekit/: __init__.py  analyzer.py  cli.py  config.py  generator.py  grid.py  presets.py  providers.py  webui.py
stylekit/presets/: accessories.yaml  haircolors.yaml  hairstyles_female.yaml  hairstyles_male.yaml  makeup.yaml  multiview.yaml  outfits.yaml
tests/: test_presets.py
